parse-display/tests/compile_fail/display/struct_no_display_field_format.rs
use parse_display::Display;

struct NoDisplay;

#[derive(Display)]
#[display("{x}")]
struct NoDisplayFieldInFormat {
    x: NoDisplay,
}

fn main() {}
